@@ -116,4 +116,4 @@ click_apply: 'Click any ServerSign to apply this command'
 click_view_list: 'Click any ServerSign to view detailed information about that sign''s executor'
 click_create: 'Click the block to create a new ServerSign'
 click_select: 'Click a sign to select it for automatic command application'
-click_info: 'Note: &2left &e& &2right &eclicks will bind this command to different executors'
+click_info: '&7&oPlease note: Your click (left or right) determines which executor this command is bound to'
